# Senior_Design

./: README.md
ADS Latex March_7_2016/: architectural_specification.aux  architectural_specification.hst  architectural_specification.lof  architectural_specification.lot  architectural_specification.tex  architectural_specification.toc
ADS Latex March_7_2016/tex/: data_flow.tex  introduction.tex  raspberry_subsystem.tex  system_overview.tex  x_layer_subsystems.tex  y_layer_subsystems.tex  y_layer_subsystems.tex.backup  z_layer_subsystems.tex
Canny_Pupil_Updated_Centroid_January_22_2015/: CMakeCache.txt  Makefile  PupilTracker.cpp  canny_main.cpp  canny_tracker  cmake_install.cmake
Canny_Pupil_Updated_Centroid_January_25_2015/: CMakeCache.txt  CMakeLists.txt  Makefile  PupilTracker.cpp  canny_main.cpp  canny_tracker  cmake_install.cmake
EYE_TRACKER_March_5_2016/: CMakeCache.txt  Makefile  PupilTracker.cpp  canny_main.cpp  canny_tracker  cmake_install.cmake
EYE_TRACKER_march_11_2016/: CMakeCache.txt  Makefile  PupilTracker.cpp  PupilTracker.h  canny_main.cpp  canny_tracker  cmake_install.cmake
EYE_TRACKER_march_11_2016/Ellipse/: CMakeCache.txt  CMakeLists.txt  Ellipse.cpp  Ellipse.h  Makefile  cmake_install.cmake  test  test.cpp
EyeTracker/: CMakeCache.txt  CMakeLists.txt  EyeTracker  Makefile  cmake_install.cmake  main.cpp
JAN_27_CUDA/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main  main.cpp  main.cpp~
MIPI Board (Jetson TK1)/: Jetson_TK1.brd  Jetson_TK1.pro  Jetson_TK1.sch  eagle.epf
SRS Latex April_25_2016/: system_requirements_specification.aux  system_requirements_specification.fls  system_requirements_specification.hst  system_requirements_specification.tex  system_requirements_specification.toc  system_requirements_specification.ver
SRS Latex April_25_2016/tex/: Packaging Requirements.tex  customer_requirements.tex  packaging_requirements.tex  performance_requirements.tex  product_concept.tex  product_description.tex  safety_requirements.tex
SRS Latex March_7_2016 - Copy/: system_requirements_specification.aux  system_requirements_specification.blg  system_requirements_specification.tex  system_requirements_specification.toc
SRS Latex March_7_2016 - Copy/tex/: customer_requirements.tex  packaging_requirements.tex  performance_requirements.tex  product_concept.tex  product_description.tex  safety_requirements.tex
Website/: Eye Tracker Block Diagram.umd  index.html
added_ellipse_tests_march5_saturday/: CMakeCache.txt  Ellipse.cpp  Makefile  PupilTracker.cpp  PupilTracker.h  canny_main.cpp  canny_tracker  cmake_install.cmake
architectural specification latex/: architectural_specification.aux  architectural_specification.lof  architectural_specification.lot  architectural_specification.tex  architectural_specification.toc  architectural_specification.ver  mdttfont.def
architectural specification latex/tex/: data_flow.tex  introduction.tex  system_overview.tex  system_overview.tex.backup  x_layer_subsystems.tex  x_layer_subsystems.tex.backup  y_layer_subsystems.tex  y_layer_subsystems.tex.backup  z_layer_subsystems.tex
eyetracker_cuda_gpu/: CMakeCache.txt  CMakeLists.txt  Makefile  PupilTracker.cpp  PupilTracker.h  canny_main.cpp  cmake_install.cmake  eyetracker_cuda_gpu.layout  main
mcmurrough/: canny_main.cpp
mcmurrough/canny_pupil/: PupilTracker.cpp  PupilTracker.h
proeye/: README.md
proeye/pupil_tracker_standalone/: CMakeCache.txt  CMakeLists.txt  Makefile  canny_main.cpp  canny_tracker  cmake_install.cmake  swirski_main.cpp  swirski_tracker
proeye/pupil_tracker_standalone/canny_pupil/: PupilTracker.cpp  PupilTracker.h
proeye/pupil_tracker_standalone/swirski_pupil/: ConicSection.h  PupilTracker.cpp  PupilTracker.h  cvx.cpp  cvx.h  timer.h  utils.cpp  utils.h
proeye/raspi_headset/: CMakeLists.txt  TO RUN.txt  package.xml  raspi_headset.launch
proeye/raspi_headset/src/eyecam/: main.cpp
proeye/raspi_headset/src/pupil/: CMakeLists.txt  pupil_tracker.cpp
proeye/raspi_headset/src/pupil/lib/: PupilTracker.cpp
project charter latex/: mdsffont.def~  project_charter.aux  project_charter.bbl  project_charter.blg  project_charter.dvi  project_charter.hst  project_charter.lof  project_charter.tex  project_charter.tex.backup  project_charter.toc  project_charter.ver
project charter latex/reference/: refs.bib
project charter latex/tex/: background.tex  cost_proposal.tex  documentation_reporting.tex  facilities_equipment.tex  mission.tex  refs.bib  related_work.tex  roles_responsibilities.tex  success_criteria.tex  system_overview.tex  vision.tex
ransac/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  ransac
system requirements specification latex/: system_requirements_specification.aux  system_requirements_specification.fdb_latexmk  system_requirements_specification.hst  system_requirements_specification.lof  system_requirements_specification.tex  system_requirements_specification.toc  system_requirements_specification.ver
system requirements specification latex/tex/: Packaging Requirements.tex  Safety Requirements.tex  customer_requirements.tex  future_items.tex  maintenance_support_requirements.tex  other_requirements.tex  packaging_requirements.tex  performance_requirements.tex  product_concept.tex  product_description.tex  safety_requirements.tex
trial/: CMakeCache.txt  CMakeLists.txt  main.cpp  open_close.cpp  video_thresh  video_thresh.cpp
